fix: 1. collect(Collectors.toList()) 대신 toList()사용 2. orElseThrow()사용해서 null exception처리 및 Optional 해제 3. 람다식 대신 이중콜론연산자 사용