@@ -4,7 +4,6 @@ import com.ssafy.goumunity.domain.feed.domain.FeedImg;
 import com.ssafy.goumunity.domain.feed.service.post.FeedImgRepository;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Repository;
 
@@ -21,8 +20,6 @@ public class FeedImgRepositoryImpl implements FeedImgRepository {
 
     @Override
     public List<FeedImg> findAllByFeedId(Long feedId) {
-        return feedImgJpaRepository.findAllByFeedId(feedId).stream()
-                .map(item -> item.to())
-                .collect(Collectors.toList());
+        return feedImgJpaRepository.findAllByFeedId(feedId).stream().map(FeedImgEntity::to).toList();
     }
 }
